--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-    <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">	
+    <link rel="shortcut icon" href="{{ site.baseurl }}/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="{{ site.baseurl }}/images/logo.png" type="image/x-icon">	
     {% include meta.html %}
 
     <!--[if lt IE 9]>
